--- a/ios/igniteshoesapp/Info.plist
+++ b/ios/igniteshoesapp/Info.plist
@@ -25,6 +25,7 @@
       <dict>
         <key>CFBundleURLSchemes</key>
         <array>
+          <string>igniteshoesapp</string>
           <string>com.nexus.igniteshoesapp</string>
         </array>
       </dict>
